--- a/www.sercanozer.com/index.html
+++ b/www.sercanozer.com/index.html
@@ -152,25 +152,25 @@
                                             <h4>Development</h4>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 100%; background: rgb(255, 209, 92);"></div>
-                                                <div class="skill-percent">75%</div>
+                                                <div class="skill-percent"><i class="lni lni-code-alt" style="font-size: 25px;"></i></div>
                                             </div>
                                         </div>
 
                                         <!-- skill items -->
                                         <div class="skill-item">
-                                            <h4>Photography</h4>
+                                            <h4>Information Technologies</h4>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 100%; background: rgb(255, 75, 96);"></div>
-                                                <div class="skill-percent">75%</div>
+                                                <div class="skill-percent"><i class="lni lni-network" style="font-size: 25px;"></i></div>
                                             </div>
                                         </div>
 
                                         <!-- skill items -->
                                         <div class="skill-item">
-                                            <h4>UI/UX</h4>
+                                            <h4>System Side</h4>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 100%; background: rgb(108, 108, 229);"></div>
-                                                <div class="skill-percent">65%</div>
+                                                <div class="skill-percent"><i class="lni lni-laptop" style="font-size: 25px;"></i></div>
                                             </div>
                                         </div>
 
@@ -178,8 +178,16 @@
                                         <div class="skill-item">
                                             <h4>Cyber Security</h4>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 80%; background: rgb(22, 22, 49);"></div>
+                                                <div class="progress-in" style="width: 100%; background: rgb(22, 22, 49);"></div>
                                                 <div class="skill-percent"><i class="lni lni-lock-alt" style="font-size: 25px;"></i></div>
+                                            </div>
+                                        </div>
+                                        <!-- skill items -->
+                                        <div class="skill-item">
+                                            <h4>Design</h4>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 100%; background: hsl(152, 75%, 60%)"></div>
+                                                <div class="skill-percent"><i class="lni lni-layout" style="font-size: 25px;"></i>	</div>
                                             </div>
                                         </div>
                                     </div>
