--- a/index.html
+++ b/index.html
@@ -451,24 +451,12 @@
                     </div>
                  </div>
 
+                 
                  <!-- portfolio item-->
                  <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner">
-                        <div class="portfolio-item-thumbnail">
-                            <img src="assets/img/ZARA.jpg" class="centered-img" style="width: 600px; height: 500px;">
-                            <div class="mask"></div>
-                        </div>
-                        <span class="term"></span>
-                        <h3 class="portfolio-item-title">ZARA Sale</h3>
-                        <span class="more-button">&hellip;</span>
-                    </div>
-                 </div>
-
-                 <!-- portfolio item-->
-                 <div class="portfolio-item padd-15">
-                    <div class="portfolio-item-inner">
-                        <div class="portfolio-item-thumbnail">
-                            <video controls width="100%" height="auto"><source src="assets/videos/ENPLUS.mp4"></video>
+                        <div class="portfolio-item-thumbnail" style="display: flex; justify-content: center;">
+                            <iframe width="600px" height="500px" src="https://www.youtube.com/embed/usXViplzySg" allowfullscreen></iframe>
                             <div class="mask"></div>
                         </div>
                         <span class="term"></span>
@@ -480,8 +468,8 @@
                  <!-- portfolio item-->
                  <div class="portfolio-item padd-15">
                     <div class="portfolio-item-inner">
-                        <div class="portfolio-item-thumbnail">
-                            <video controls width= "100%" height="auto"><source src="assets/videos/SALE UP TO.mp4"></video>
+                        <div class="portfolio-item-thumbnail" style="display: flex; justify-content: center;">
+                            <iframe width="600px" height="500px" src="https://www.youtube.com/embed/eulQkGIToMk" allowfullscreen></iframe>
                             <div class="mask"></div>
                         </div>
                         <span class="term"></span>
@@ -489,6 +477,20 @@
                         <span class="more-button">&hellip;</span>
                     </div>
                  </div>
+
+                 <!-- portfolio item-->
+                 <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="assets/img/ZARA.jpg" class="centered-img" style="width: 600px; height: 500px;">
+                            <div class="mask"></div>
+                        </div>
+                        <span class="term"></span>
+                        <h3 class="portfolio-item-title" style="margin-left: 10%;">ZARA Sale</h3>
+                        <span class="more-button">&hellip;</span>
+                    </div>
+                 </div>
+
             </div>
         </div>
         <!-- fact item -->
