--- a/www.sercanozer.com/index.html
+++ b/www.sercanozer.com/index.html
@@ -285,12 +285,10 @@
                  <!-- project items -->
                  <div class="project-item padd-15">
                     <div class="project-item-inner" style="background: rgb(249, 123, 139);">
-                        <img src="assets/img/metasurface.png" alt="" width="250" height="auto">
-                        <h3>Metasurface Antenna</h3>
-                        <p>S. Ozer, L. Kouhalvandi, L. Matekovits and M. Alibakhshikenari,
-                        "Design of Wideband Metasurface Structure with the Aid of BottomUp Optimization" 2024 Uluslararası İleri Uygulamalarda
-                        Elektromanyetik Konferansı (ICEAA), Lizbon, Portekiz, 2024, pp. 316-
-                        319, doi: 10.1109/ICEAA61917.2024.10701815.</p>
+                        <img src="assets/img/ehliyet.png" alt="" width="250" height="auto">
+                        <h3>Driver's License Exam Application</h3>
+                        <p>This application was developed with Flutter and Dart using Android Studio, supported by Firebase infrastructure. Soon to be published on iOS and Google Play Store, the app provides practice exams and tests designed for candidates preparing
+                             for the driving license written exam.</p>
                     </div>
                  </div>
              </div>
