--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
                                  <div class="timeline-item">
                                     <i class="lni lni-briefcase timeline-icon"></i>
                                     <h3 class="timeline-date">
-                                        <i class="lni lni-calendar"></i>03/2024 - 04/2024
+                                        <i class="lni lni-calendar"></i>10/2024 - Continue
                                     <h3>
-                                        <h3 class="timeline-title">IT Support Specialist - Apphere</h3>
-                                        <p class="timeline-text">- I performed the hardware and software installations of user computers and managed the failure and support processes. 
-                                            <br>- Performed regular maintenance and reporting to ensure the up-to-dateness and security of devices by monitoring IT inventory.        </p>
+                                        <h3 class="timeline-title">IT System Support Specialist - Doğuş University</h3>
+                                        <p class="timeline-text">- Managing the continuity of Active Directory, VMware, and network infrastructure by performing system monitoring, maintenance, and user support operations. 
+                                            <br>- Taking technical responsibility for server management, security policies, and access control operations.</p>
                                  </div>
 
                                  <!-- timeline item -->
