--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                  <div class="timeline-item">
                                     <i class="lni lni-briefcase timeline-icon"></i>
                                     <h3 class="timeline-date">
-                                        <i class="lni lni-calendar"></i>10/2024 - Continue
+                                        <i class="lni lni-calendar"></i>10/2025 - Continue
                                     <h3>
                                         <h3 class="timeline-title">IT System Support Specialist - Doğuş University</h3>
                                         <p class="timeline-text">- Managing the continuity of Active Directory, VMware, and network infrastructure by performing system monitoring, maintenance, and user support operations. 
@@ -564,6 +564,13 @@
                                         <!-- skill items -->
                                         <div class="skill-item" style="padding-left: 12px;">
                                             <h4>&bull; VirtualBox</h4>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 100%; background: rgb(255, 209, 92);"></div>
+                                            </div>
+                                        </div>
+                                        <!-- skill items -->
+                                        <div class="skill-item" style="padding-left: 12px;">
+                                            <h4>&bull; Active Directory</h4>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 100%; background: rgb(255, 209, 92);"></div>
                                             </div>
