--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                                         <i class="lni lni-calendar"></i>10/2025 - Continue
                                     <h3>
                                         <h3 class="timeline-title">IT System Support Specialist - Doğuş University</h3>
-                                        <p class="timeline-text">- Managing the continuity of Active Directory, VMware, and network infrastructure by performing system monitoring, maintenance, and user support operations. 
-                                            <br>- Taking technical responsibility for server management, security policies, and access control operations.</p>
+                                        <p class="timeline-text">- Administered user and access management processes, including account provisioning, permission assignment, and password policies via Active Directory. 
+                                            <br>- Configured and troubleshooted network peripherals (Wi-Fi printers, clients, switches) using TCP/IP, DHCP, and static IP assignments. Managed system imaging and recovery with Acronis to ensure data integrity.</p>
                                  </div>
 
                                  <!-- timeline item -->
