--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#experience" class="nav-link">Experience</a>
+                        <a href="#experience" class="nav-link">Education & Experience</a>
                     </li>
 
                     <li class="nav-item">
