--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#experience" class="nav-link">Education & Experience</a>
+                        <a href="#experience" class="nav-link">Experience</a>
                     </li>
 
                     <li class="nav-item">
@@ -307,7 +307,7 @@
       <section class="section" id="experience">
         <div class="container">
             <!--section title-->
-            <h2 class="section-title padd-15">Experience</h2>
+            <h2 class="section-title padd-15">Education & Experience</h2>
             <div class="row">
                 <!--education-->
                 <div class="education padd-15">
